Lone wolf - fully updated, images added,fixed jumbotron and navbar alignment

--- a/css/style.css
+++ b/css/style.css
@@ -2,20 +2,30 @@ body {
   font-size: 1.5rem;
 }
 
-/* .jumbotron {
-} */
+.jumbotron {
+  padding: 2rem 1rem;
+}
 
 .jumbotron p {
   font-family: 'Happy Monkey', cursive;
+  color: white;
+  align-content: flex-end;
+  margin-top: 0;
+  background-color: rgba(0,0,0,0.2);
 }
 
 .h1 {
+  font-size: 3rem;
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
   color: #926890;
+  color: black;
   font-family: 'Happy Monkey', cursive;
+  margin-bottom: 1rem;
+  text-shadow: 1px 1px 2px white;
 }
+
 .card-img-top {
   padding: 1rem;
   /* border: 1px solid #926890; */
@@ -53,7 +63,7 @@ nav {
 .card {
   margin: 10px;
   padding: 10px;
-  border: 2px solid #8E88B5;
+  border: 1px solid #8E88B5;
 }
 
 .card-pkg {
@@ -67,6 +77,11 @@ nav {
   }
 }
 
+.btn {
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
 .btn-info {
   background-color: #CCFC92;
   color: black;
@@ -77,7 +92,15 @@ nav {
   background-color: #CCFC92;
   border: 1px solid #CCFC92;
   color: black;
-  padding: 1rem 1.5rem;
+  padding: 1rem 2.7rem;
+}
+
+.btn-chatter {
+  margin-top: 2rem;
+}
+
+.btn-chatter:hover {
+  border: 1px solid black;
 }
 
 .footer {
@@ -98,8 +121,6 @@ nav {
   align-items: center;
   margin-left: 2px;
   margin-right: 2px;
-  /* display: flex;
-  justify-content: flex-start; */
 }
 
 .legal {
@@ -164,14 +185,18 @@ nav {
 
 .main {
   background-color: rgba(178, 227, 232, 0.5);
+  background-color: #008B96;
   display: flex;
   justify-content: center;
   width: 90vw;
   padding: 2rem;
 }
 
+.innerbox p {
+  font-family: 'Happy Monkey', cursive;
+}
+
 .box {
-  border: 1px solid black;
   width: 90%;
   margin: 0 auto;
   display: flex;
@@ -179,14 +204,27 @@ nav {
   align-items: center;
 }
 
+/* .main-wolf {
+  display: flex;
+}
+
+.mainwolf.innerbox {
+  flex-direction: column;
+} */
+
 .innerbox {
-  border: 1px solid green;
-  background-color: #CCFC92;
-  width: 80%;
+  width: 85%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  /* align-items: center; */
+  align-items: center;
+}
+
+@media only screen and (max-width: 1100px) {
+  .innerbox {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .card-gb, .card-minutes {
@@ -213,18 +251,11 @@ nav {
   padding: 0.8rem 2.5rem;
 }
 
-@media only screen and (max-width: 1100px) {
-  .innerbox {
-    flex-direction: column;
-    align-items: center;
-  }
-}
+
 
 .form-b {
   display: flex;
   justify-content: center;
-  border: 1px solid black;
-  background-color: yellow;
   width: 70%;
   margin-right: 15%;
   margin-left: 15%;
@@ -237,13 +268,21 @@ nav {
 }
 
 h3 {
-  margin: 0 10px;
+  margin: 0 15px;
 }
 
 
 
 .btn-success {
   margin-bottom: 2px;
+  background-color: #BEFBFF;
+  border: 1px solid #58C1CC;
+  color: black;
+}
+
+.btn-success:hover {
+  background-color: #58C1CC;
+  border: 1px solid #58C1CC;
 }
 
 ::-webkit-input-placeholder {
@@ -282,4 +321,30 @@ font-size: 20px !important;
   height: 350px;
   background-position: 50% 44%;
   display: flex;
+  margin-bottom: 1rem;
+}
+
+.jumbotron-main {
+  background-image: url(../images/raccoons_main.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 350px;
+  background-position: 50% 70%;
+  display: flex;
+  margin-bottom: 1rem;
+}
+
+.jumbotron-lonewolf {
+  background-image: url(../images/size.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 350px;
+  background-position: 40% 28%;
+  display: flex;
+  margin-bottom: 1rem;
+}
+
+.collapse {
+  display: flex;
+  justify-content: flex-end;
 }
